--- a/davis.justlin/lib/css/storeStyleGuide.css
+++ b/davis.justlin/lib/css/storeStyleGuide.css
@@ -5,15 +5,16 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Eurostile, Helvetica, sans-serif;
   font-size: 16ox;
   height: 100vh;
   display: grid;
-  background-color: #000000;
+  background-image: url("/davis.justlin/img/bg-final2.jpg");
+  background-attachment: fixed;
 
   grid-template-areas:
     "header header header"
-    "nav content content"
+    "content content content"
     "footer footer footer";
 
   grid-template-columns: 1fr 4fr;
@@ -22,18 +23,16 @@ body {
 
 a {
   text-decoration: none;
-  color: #25242c;
+  color: #fff;
 }
 a:hover {
-  font-weight: bold;
-  background-color: darkgray;
+  text-decoration: underline;
 }
 
 header,
 footer,
 nav,
 main {
-  background-color: whitesmoke;
   border: darkgray 1px solid;
   padding: 20px;
   font-family: "Eurostile";
@@ -170,8 +169,8 @@ hr {
 
 .card {
   text-align: left;
-  color: #000;
-  background-color: lightgray;
+  color: rgb(252, 248, 248);
+
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
   padding-left: 2em;
@@ -181,13 +180,12 @@ hr {
   margin: 10px;
   margin-bottom: 30px;
   position: relative;
-  content: inherit;
 }
 
 .card-dark-soft {
   text-align: left;
   color: rgb(231, 227, 227);
-  background-color: #313030;
+  background-color: rgb(49, 48, 48);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
   padding-left: 2em;
@@ -201,10 +199,11 @@ hr {
   opacity: 0.5;
 }
 .card-hard {
+  border-radius: 10px;
   text-align: left;
   border: #000 1px solid;
-  color: #000;
-  background-color: rgb(248, 247, 247);
+  color: rgb(248, 242, 242);
+  background-color: rgba(2, 0, 0, 0.5);
   padding-left: 2em;
   padding-right: 2em;
   padding-bottom: 2em;
@@ -213,51 +212,6 @@ hr {
   margin-bottom: 30px;
   position: relative;
   content: inherit;
-}
-
-.productCard {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  max-width: 250px;
-  margin: auto;
-  text-align: center;
-  font-family: eurostile;
-  padding: 1.5em;
-  border-radius: 0.5em;
-  border: #565863 1px solid;
-  background-color: #a6a7aa;
-}
-
-.productImage {
-  border-radius: 10px;
-  width: fit-content;
-}
-
-.productPrice {
-  color: #f2f4f7;
-  font-size: 1em;
-  font-weight: 300;
-}
-
-.productButton {
-  color: #fff;
-  border-radius: 1em;
-  padding: 0.5em;
-  margin-top: 15px;
-  background-color: #79869e;
-  text-align: center;
-  cursor: pointer;
-  width: fit-content;
-  align-self: center;
-  font-family: eurostile;
-  font-size: 1em;
-  font-weight: 100;
-}
-
-.productButton:hover {
-  color: #000;
-  background-color: #fff;
 }
 
 h1 {
@@ -298,16 +252,15 @@ li {
 }
 
 #color1 {
-  background-color: #8f0d04;
+  background-color: #da1f07;
   text-align: center;
   max-width: 200px;
   border-radius: 10px;
   margin-bottom: 5px;
   border-style: groove;
-  color: #fff;
 }
 #color2 {
-  background-color: #f3dc5c;
+  background-color: #ffe200;
   text-align: center;
   max-width: 200px;
   border-radius: 10px;
@@ -315,7 +268,7 @@ li {
   border-style: groove;
 }
 #color3 {
-  background-color: #b5a89c;
+  background-color: #c27b32;
   text-align: center;
   max-width: 200px;
   border-radius: 10px;
@@ -331,17 +284,7 @@ li {
   border-style: groove;
 }
 #color5 {
-  background-color: #79869e;
-  text-align: center;
-  max-width: 200px;
-  border-radius: 10px;
-  margin-bottom: 5px;
-  border-style: groove;
-}
-
-#color6 {
-  background-color: #000000;
-  color: #fff;
+  background-color: #d6cece;
   text-align: center;
   max-width: 200px;
   border-radius: 10px;
@@ -393,41 +336,38 @@ button {
 }
 
 .button1 {
-  color: #fff;
   border-radius: 20px;
   padding: 10px;
-  background-color: #7d7d88;
+  background-color: #d6cece;
   margin-bottom: 10px;
 }
 
 .button1:hover {
-  color: #000;
   background-color: #eee7e7;
 }
 
 .button2 {
   border-radius: 10px;
   padding: 10px;
-  background-color: #b5a89c;
+  background-color: #f0e9e9;
   margin-bottom: 10px;
 }
 
 .button2:hover {
-  color: #000;
-  background-color: #eee7e7;
+  background-color: #afa7a7;
 }
 
 .button3 {
   border-radius: 5px;
   padding: 10px;
-  background-color: #000;
+  background-color: #3f3d3d;
   color: lightgray;
   margin-bottom: 10px;
 }
 
 .button3:hover {
+  background-color: #a3a6b8;
   color: #000;
-  background-color: #eee7e7;
 }
 
 .table {
