--- a/davis.justlin/lib/css/cae-style.css
+++ b/davis.justlin/lib/css/cae-style.css
@@ -4,6 +4,25 @@
 @media (min-width: 500px) {
 }
 
+.jsonList {
+  font-family: eurostile;
+  font-weight:bold;
+  white-space: pre;
+  background-color: #230101;
+  padding-left: 40px;
+  padding-bottom: 20px;
+  border-radius: 15px;
+}
+
+#adminForm {
+  margin-left: 100px;
+}
+
+#adminBtn {
+
+  margin-left: 10px;
+}
+
 body {
   background: rgb(5, 0, 0);
   background: linear-gradient(
@@ -42,8 +61,8 @@ body {
   background-image: url("../../img/hero-bg.png");
   background-repeat: no-repeat;
   background-size: contain;
-  -webkit-box-reflect: below 0px
-    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+  -webkit-box-reflect: below -80px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
 }
 
 .navigation {
