--- a/davis.justlin/lib/css/cae-style.css
+++ b/davis.justlin/lib/css/cae-style.css
@@ -120,6 +120,7 @@ ul {
 .storeItem {
   max-width: 100%;
   grid-column-gap: 15px;
+  grid-row-gap: 15px;
   display: grid;
 
   grid-template-areas: "productCard produtCard productCard";
@@ -127,6 +128,13 @@ ul {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+
+.storeItemFlex {
+
+display: flex;
+flex-wrap: wrap;
+margin-bottom: 15px;
+}
 .footer {
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 10px;
@@ -157,12 +165,43 @@ ul {
   /*  box-shadow: 3px -3px 29px  #2B1111; */
 }
 
+.display-inline-wrap {
+  display: wrap;
+}
+
+.display-flex {
+  display: flex;
+}
+.display-inline-flex {
+  display: inline-flex;
+}
+.display-inline-flex-promo {
+  display: inline-flex;
+  width: 100%;
+}
+
+.card {
+  text-align: left;
+  color: rgb(247, 243, 243);
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.55);
+  border-radius: 10px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 2em;
+  padding-top: 2em;
+  margin: 10px;
+  margin-bottom: 30px;
+  position: relative;
+}
+
 .productCard {
   display: block;
   flex: wrap;
   align-content: center;
   max-width: 250px;
   margin-right: 15px;
+  margin-bottom: 15px;
   text-align: center;
   font-family: eurostile;
   padding: 1.5em;
@@ -174,16 +213,39 @@ ul {
 
 .productCard img {
   max-width: 200px;
+  min-width: none;
 }
 
 .productImage {
   border-radius: 10px;
+  width: fit-content;
+}
+
+.productCard-hres {
+  display: block;
+  flex: wrap;
+  align-content: center;
+  max-width: 100%;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+  font-family: eurostile;
+  padding: 1.5em;
+  border-radius: 0.5em;
+  border: #565863 1px solid;
+  background-color: rgba(24, 4, 4, 0.5);
+  /*  box-shadow: 3px -3px 29px  #2B1111; */
+}
+
+.productCard-hres img {
+  width: 100%;
+  height: auto;
 }
 
 .productPrice {
   color: #f2f4f7;
   font-size: 1em;
-  font-weight: 300;
+  font-weight: 600;
 }
 
 .productButton {
@@ -199,6 +261,7 @@ ul {
   font-family: eurostile;
   font-size: 1em;
   font-weight: 100;
+  transition: all 0.6s;
 }
 
 .productButton a:visited {
