--- a/davis.justlin/lib/css/cae-style.css
+++ b/davis.justlin/lib/css/cae-style.css
@@ -401,6 +401,20 @@ table tr {
   width: 20em;
 }
 
+.form-select {
+  outline: none;
+  appearance: none;
+  width: 100%;
+  min-width: 15ch;
+  max-width: 30ch;
+  background-color: #ecedf3;
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  font-size: 1.0rem;
+  cursor: pointer;
+  line-height: 1.1;
+}
+
 .form-button {
   border-radius: 10px;
   padding: 10px;
