Update Version not pushing to DB
Troubleshooting

--- a/davis.justlin/lib/css/cae-style.css
+++ b/davis.justlin/lib/css/cae-style.css
@@ -18,11 +18,13 @@
 }
 
 .filterUI {
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 10px;
-  
-
+    display: flex;
+    flex-wrap: wrap;
+   
+    margin-bottom: 10px;
+    max-width: 800px;
+    margin-left: 20px;
+    margin-right: auto;
 }
 
 .display-inline-wrap {
@@ -51,8 +53,9 @@
   flex: 1 1 auto;
 }
 .flex-none {
-  flex: none;
+  flex:auto;
   margin-left: auto;
+  margin-right: auto;
   
 }
 .flex-align-center {
@@ -83,9 +86,8 @@ body {
 }
 
 .main {
-  border: solid 1px;
-  border-radius: 25px;
-  border-color: grey;
+  
+;
   padding: 15px;
   display: grid;
   background-image: url("../../img/bg-final2.png");
@@ -94,21 +96,25 @@ body {
 }
 
 .top {
-  max-width: 100%;
+  max-width: 800px;
   display: grid;
-
+  background-image: url("../../img/hero-bg.png");
+  margin-right: auto;
+  margin-left: auto;
+  background-repeat: no-repeat;
+  background-size: contain;
   grid-template-areas: "hero hero hero nav";
-
   grid-template-columns: 3fr 1fr;
 }
 
+.top img {
+  margin-top: 100px;
+}
+
 .hero {
+
   grid-area: "hero";
-  background-image: url("../../img/hero-bg.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  -webkit-box-reflect: below -80px
-    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+ 
 }
 
 .navigation {
@@ -177,9 +183,22 @@ ul {
 
 .storeItemFlex {
 
-display: flex;
-flex-wrap: wrap;
-margin-bottom: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 15px;
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
+.siteInfo {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 15px;
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .footer {
   background-color: rgba(0, 0, 0, 0.3);
@@ -277,7 +296,8 @@ align-content: center;
   flex: wrap;
   align-content: center;
   max-width: 250px;
-  margin-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 15px;
   text-align: center;
   font-family: eurostile;
@@ -291,6 +311,8 @@ align-content: center;
 .productCard img {
   max-width: 200px;
   min-width: none;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -304,6 +326,7 @@ align-content: center;
 .productImage {
   border-radius: 10px;
   width: fit-content;
+  min-width: 200px;
 }
 
 .productCard-hres {
