--- a/davis.justlin/lib/css/cae-style.css
+++ b/davis.justlin/lib/css/cae-style.css
@@ -22,7 +22,7 @@
     flex-wrap: wrap;
    
     margin-bottom: 10px;
-    max-width: 800px;
+    max-width: 900px;
     margin-left: 20px;
     margin-right: auto;
 }
@@ -96,7 +96,7 @@ body {
 }
 
 .top {
-  max-width: 800px;
+  max-width: 900px;
   display: grid;
   background-image: url("../../img/hero-bg.png");
   margin-right: auto;
@@ -144,7 +144,7 @@ ul {
   text-decoration: none;
 }
 
-.top,
+
 .navigation,
 .hero,
 .storeContainer,
@@ -230,6 +230,19 @@ ul {
   /*  box-shadow: 3px -3px 29px  #2B1111; */
 }
 
+
+.cartCard {
+  display: block;
+  flex: wrap;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: eurostile;
+  padding: 1.5em;
+  border-radius: 0.5em;
+  border: #565863 1px solid;
+  background-color: rgba(68, 67, 67, 0.5);
+  /*  box-shadow: 3px -3px 29px  #2B1111; */
+}
 .display-inline-wrap {
   display: wrap;
 }
@@ -248,7 +261,7 @@ ul {
 .card {
   
   color: rgb(247, 243, 243);
-
+  max-width: 800px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
   padding-left: 2em;
@@ -325,8 +338,9 @@ align-content: center;
 
 .productImage {
   border-radius: 10px;
-  width: fit-content;
-  min-width: 200px;
+  width: auto;
+  min-width: 100px;
+  max-width: 250px;
 }
 
 .productCard-hres {
@@ -349,7 +363,7 @@ align-content: center;
   display: block;
   flex: wrap;
   align-content: center;
-  max-width: 400px%;
+  max-width: 800px;
   margin-right: 15px;
   margin-bottom: 15px;
   text-align: center;
