--- a/davis.justlin/lib/css/storeStyleGuide.css
+++ b/davis.justlin/lib/css/storeStyleGuide.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  
 }
 
 body {
@@ -9,7 +10,8 @@ body {
   font-size: 16ox;
   height: 100vh;
   display: grid;
-  background-image: url("/davis.justlin/img/bg-final2.jpg");
+  background-image: url("../img/bg-final2.jpg");
+
   background-attachment: fixed;
 
   grid-template-areas:
@@ -23,7 +25,7 @@ body {
 
 a {
   text-decoration: none;
-  color: rgb(47, 45, 45);
+  color: rgb(197, 168, 168);
 }
 a:hover {
   text-decoration: underline;
@@ -33,7 +35,7 @@ header,
 footer,
 nav,
 main {
-  border: darkgray 1px solid;
+  border: rgb(227, 224, 224) 1px solid;
   padding: 20px;
   font-family: "Eurostile";
 }
@@ -73,6 +75,7 @@ nav {
   background-color: rgb(86, 83, 99);
   color: white;
   padding-left: 1em;
+  text-decoration: underline;
 }
 .nav-material ul,
 .nav-crumbs ul,
@@ -102,10 +105,16 @@ nav {
   padding-right: 2em;
 }
 
-.nav-pills a {
+.nav-pills {
   border-radius: 2em;
   padding: 0.5em 1em;
-  color: rgb(1, 0, 7);
+  color: rgb(236, 233, 231);
+  
+}
+
+.nav-pills a:hover {
+  text-decoration: underline;
+ 
 }
 .nav-material a,
 .nav-crumbs a {
@@ -169,10 +178,12 @@ hr {
 
 .card {
   text-align: left;
-  color: rgb(42, 38, 38);
+  color: rgb(250, 247, 247);
+  background-color:   rgba(79, 76, 76, 0.5);;
 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
+  border-color: #a3a6b8;
   padding-left: 2em;
   padding-right: 2em;
   padding-bottom: 2em;
@@ -180,14 +191,16 @@ hr {
   margin: 10px;
   margin-bottom: 30px;
   position: relative;
+  background
 }
 
 .card-dark-soft {
   text-align: left;
-  color: rgb(231, 227, 227);
-  background-color: rgb(49, 48, 48);
+  color: white;
+  background-color: rgb(97, 92, 92);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
+  border-color: #efeff3;
   padding-left: 2em;
   padding-right: 2em;
   padding-bottom: 2em;
@@ -196,13 +209,13 @@ hr {
   margin-bottom: 30px;
   position: relative;
   content: inherit;
-  opacity: 0.5;
+  opacity: 0.7;
 }
 .card-hard {
   border-radius: 10px;
   text-align: left;
   border: #000 1px solid;
-  color: rgb(51, 47, 47);
+  color: rgb(252, 250, 250);
   background-color: rgba(2, 0, 0, 0.5);
   padding-left: 2em;
   padding-right: 2em;
@@ -327,6 +340,34 @@ li {
   transition: 0.5s;
 }
 
+
+.form-button {
+  color: #fff;
+  border-radius: .3em;
+  padding: 0.5em;
+  margin-top: 15px;
+  background-color: #361814;
+  text-align: center;
+  cursor: pointer;
+  width: 150px;
+  align-self: center;
+  font-family: eurostile;
+  font-size: 1em;
+  font-weight: 100;
+  transition: all 0.6s;
+}
+
+.form-button:hover {
+  color: #000;
+  background-color: rgb(224, 93, 6);
+}
+
+.buttonPurchase,
+.buttonPayment {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 button {
   display: block;
   padding: 2em;
@@ -371,11 +412,12 @@ button {
 }
 
 .table {
+  color: rgb(252, 252, 252);
   width: 100%;
   border-collapse: collapse;
 }
 table tr {
-  border-bottom: 1px solid rgb(19, 18, 18);
+  border-bottom: 1px solid rgb(248, 244, 244);
 }
 
 .table-alt {
@@ -388,21 +430,21 @@ table tr {
 }
 
 .table-borders tr:hover {
-  background-color: #faf4f4;
+  background-color: #f80303;
 }
 .table-borders {
   width: 100%;
-  border: 1px solid black;
+  border: 1px solid rgb(242, 237, 237);
   border-collapse: collapse;
 }
 .table-borders td {
-  border: 1px solid #000;
+  border: 1px solid rgb(232, 215, 215);
   padding-left: 1em;
   text-align: center;
 }
 
 .table-borders th {
-  border: 1px solid #000;
+  border: 1px solid rgb(224, 212, 212);
   padding-left: 1em;
   text-align: center;
 }
@@ -427,17 +469,17 @@ figure img {
 }
 
 .form-input:focus {
-  border-bottom-color: #3f3cf1;
+  border-bottom-color: #b5b4be;
 }
 
 .form-label {
-  color: #565863;
+  color: #f3f1ed;
   display: block;
 }
 
 .form-control {
-  color: #565863;
-  background-color: gainsboro;
+  color: #e0dedc;
+  background-color: rgb(96, 91, 91);
   width: auto;
   display: flex;
   padding-bottom: 1em;
@@ -462,10 +504,15 @@ figure img {
 }
 
 .hotdog {
+  color: #afa7a7;
+  text-align: center;
   border-radius: 3em;
-  padding: 0.8em 2em;
-  margin-top: 1em;
+  padding: 5px 5px;
+  width:100px;
+  margin-right: 0x;
   display: flex;
+  border-color: #ef4f0a;
+  background-color: #230101;
 }
 
 .hotdog input {
@@ -480,7 +527,7 @@ figure img {
   width: 100%;
   min-width: 15ch;
   max-width: 30ch;
-  background-color: #ecedf3;
+  background-color: #908686;
   border-radius: 0.25em;
   padding: 0.25em 0.5em;
   font-size: 1.25rem;
@@ -492,6 +539,8 @@ figure img {
   margin-left: 2em;
   margin-right: 1em;
   margin-bottom: 1em;
+  color: #000;
+  
 }
 
 .switch {
